Added handling, and updated UI, for Known Loot & Drop chance

--- a/src/EQTool.csproj
+++ b/src/EQTool.csproj
@@ -376,6 +376,7 @@
     <Compile Include="Models\EQMapColor.cs" />
     <Compile Include="Models\JsonMonster.cs" />
     <Compile Include="Models\JsonMonsterFaction.cs" />
+    <Compile Include="Models\JsonMonsterDrops.cs" />
     <Compile Include="Models\PlayerRequest.cs" />
     <Compile Include="PanAndZoomCanvas.xaml.cs">
       <DependentUpon>PanAndZoomCanvas.xaml</DependentUpon>
