--- a/EQToolShared/EQToolShared.csproj
+++ b/EQToolShared/EQToolShared.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Discord\Models.cs" />
     <Compile Include="Enums\AuctionType.cs" />
     <Compile Include="Enums\EventType.cs" />
+    <Compile Include="Enums\Classes.cs" />
     <Compile Include="Enums\SpellTypes.cs" />
     <Compile Include="Enums\PlayerClasses.cs" />
     <Compile Include="Enums\Servers.cs" />
