--- a/src/packages.config
+++ b/src/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="7.1.0" targetFramework="net48" />
+  <package id="Dapper" version="2.1.35" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="Extended.Wpf.Toolkit" version="4.5.1" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Connections.Client" version="8.0.0" targetFramework="net48" />
@@ -19,7 +21,12 @@
   <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.118.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Data.SQLite" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Core" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.EF6" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Linq" version="1.0.118.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net48" />
   <package id="System.Drawing.Common" version="8.0.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
