--- a/src/EQTool.csproj
+++ b/src/EQTool.csproj
@@ -253,6 +253,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.SQLite, Version=1.0.118.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.118.0\lib\net46\System.Data.SQLite.dll</HintPath>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System.Data.SQLite.EF6, Version=1.0.118.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SQLite.EF6.1.0.118.0\lib\net46\System.Data.SQLite.EF6.dll</HintPath>
@@ -393,10 +394,10 @@
     </Compile>
     <Compile Include="Models\DataFileInfo.cs" />
     <Compile Include="Models\EQMapColor.cs" />
-    <Compile Include="Models\JsonMerchantItems.cs" />
-    <Compile Include="Models\JsonMonster.cs" />
-    <Compile Include="Models\JsonMonsterFaction.cs" />
-    <Compile Include="Models\JsonMonsterDrops.cs" />
+    <Compile Include="Models\QuarmMerchantItems.cs" />
+    <Compile Include="Models\QuarmMonster.cs" />
+    <Compile Include="Models\QuarmMonsterFaction.cs" />
+    <Compile Include="Models\QuarmMonsterDrops.cs" />
     <Compile Include="Models\PlayerRequest.cs" />
     <Compile Include="PanAndZoomCanvas.xaml.cs">
       <DependentUpon>PanAndZoomCanvas.xaml</DependentUpon>
@@ -437,7 +438,7 @@
     <Compile Include="Services\Parsing\EnterWorldParser.cs" />
     <Compile Include="Services\PlayerGroupService.cs" />
     <Compile Include="Services\SignalrPlayerHub.cs" />
-    <Compile Include="Services\JsonDataService.cs" />
+    <Compile Include="Services\QuarmDataService.cs" />
     <Compile Include="Services\ZoneActivityTrackingService.cs" />
     <Compile Include="Services\PlayerTrackerService.cs" />
     <Compile Include="Services\Spells\Log\PlayerWhoLogParse.cs" />
@@ -1122,6 +1123,13 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="hat.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Embeds\x64\SQLite.Interop.dll" />
+    <EmbeddedResource Include="Embeds\x86\SQLite.Interop.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Embeds\System.Data.SQLite.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterResolveReferences">
