Adjusted timers to pull from SQLite DB, and be QuarmSpecific.

--- a/src/EQTool.csproj
+++ b/src/EQTool.csproj
@@ -396,6 +396,7 @@
     <Compile Include="Models\EQMapColor.cs" />
     <Compile Include="Models\QuarmMerchantItems.cs" />
     <Compile Include="Models\QuarmMonster.cs" />
+    <Compile Include="Models\QuarmMonsterTimer.cs" />
     <Compile Include="Models\QuarmMonsterFaction.cs" />
     <Compile Include="Models\QuarmMonsterDrops.cs" />
     <Compile Include="Models\PlayerRequest.cs" />
