--- a/src/packages.config
+++ b/src/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Autofac" version="7.1.0" targetFramework="net48" />
   <package id="Dapper" version="2.1.35" targetFramework="net48" />
+  <package id="Dapper.Contrib" version="2.0.78" targetFramework="net48" />
+  <package id="DapperExtensions" version="1.7.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="Extended.Wpf.Toolkit" version="4.5.1" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="8.0.0" targetFramework="net48" />
@@ -13,6 +15,7 @@
   <package id="Microsoft.AspNetCore.SignalR.Protocols.Json" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.TimeProvider" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Features" version="8.0.0" targetFramework="net48" />
@@ -21,8 +24,11 @@
   <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Oracle.ManagedDataAccess" version="19.11.0" targetFramework="net48" />
+  <package id="Slapper.AutoMapper" version="2.0.1" targetFramework="net48" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.118.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net48" />
   <package id="System.Data.SQLite" version="1.0.118.0" targetFramework="net48" />
   <package id="System.Data.SQLite.Core" version="1.0.118.0" targetFramework="net48" />
   <package id="System.Data.SQLite.EF6" version="1.0.118.0" targetFramework="net48" />
