--- a/EQToolShared/EQToolShared.csproj
+++ b/EQToolShared/EQToolShared.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Map\ZoneSpawnTimes.cs" />
     <Compile Include="MasterNPCList.cs" />
     <Compile Include="MasterItemList.cs" />
+    <Compile Include="Models\ZoneNameInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
