--- a/src/EQTool.csproj
+++ b/src/EQTool.csproj
@@ -444,6 +444,7 @@
     <Compile Include="Services\BinarySerializer.cs" />
     <Compile Include="Services\CHService.cs" />
     <Compile Include="Services\CustomOverlayService.cs" />
+    <Compile Include="Services\DataService.cs" />
     <Compile Include="Services\LoggingService.cs" />
     <Compile Include="Services\MapOpacityHelper.cs" />
     <Compile Include="Services\MapViewModelService.cs" />
@@ -524,7 +525,6 @@
     <Compile Include="Services\DI.cs" />
     <Compile Include="Services\FindEq.cs" />
     <Compile Include="Services\Spells\ParseSpells_spells_us.cs" />
-    <Compile Include="Services\S3dReader.cs" />
     <Compile Include="Services\Spells\SpellExtensions.cs" />
     <Compile Include="Services\Spells\SpellIcons.cs" />
     <Compile Include="Services\StringHash.cs" />
