--- a/EQToolShared/EQToolShared.csproj
+++ b/EQToolShared/EQToolShared.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Discord\DiscordAuctionParse.cs" />
     <Compile Include="Discord\Models.cs" />
     <Compile Include="Enums\AuctionType.cs" />
+    <Compile Include="Enums\QueryType.cs" />
     <Compile Include="Enums\EventType.cs" />
     <Compile Include="Enums\Classes.cs" />
     <Compile Include="Enums\SpellTypes.cs" />
