--- a/src/packages.config
+++ b/src/packages.config
@@ -22,6 +22,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Web.WebView2" version="1.0.2478.35" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Oracle.ManagedDataAccess" version="19.11.0" targetFramework="net48" />
   <package id="Slapper.AutoMapper" version="2.0.1" targetFramework="net48" />
