--- a/src/EQTool.csproj
+++ b/src/EQTool.csproj
@@ -423,6 +423,7 @@
       <DependentUpon>MobInfo.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\CustomOverlay.cs" />
+    <Compile Include="Models\DiscordSettings.cs" />
     <Compile Include="Models\QuarmZone.cs" />
     <Compile Include="Models\DataFileInfo.cs" />
     <Compile Include="Models\EQMapColor.cs" />
