--- a/src/EQTool.csproj
+++ b/src/EQTool.csproj
@@ -443,6 +443,7 @@
     <Compile Include="Services\AudioService.cs" />
     <Compile Include="Services\BinarySerializer.cs" />
     <Compile Include="Services\CHService.cs" />
+    <Compile Include="Services\ColorService.cs" />
     <Compile Include="Services\CustomOverlayService.cs" />
     <Compile Include="Services\DataService.cs" />
     <Compile Include="Services\LoggingService.cs" />
