Primarily bug fixes

--- a/EQToolShared/EQToolShared.csproj
+++ b/EQToolShared/EQToolShared.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Enums\PlayerClasses.cs" />
     <Compile Include="Enums\Servers.cs" />
     <Compile Include="ExtendedClasses\ObservableCollectionRange.cs" />
+    <Compile Include="ExtendedClasses\StringExtensions.cs" />
     <Compile Include="HubModels\CustomTimer.cs" />
     <Compile Include="HubModels\PlayerLocation.cs" />
     <Compile Include="Map\SignalrPlayer.cs" />
