Moved pipe logic, rules updates

--- a/src/EQTool.csproj
+++ b/src/EQTool.csproj
@@ -456,6 +456,7 @@
     <Compile Include="Services\BinarySerializer.cs" />
     <Compile Include="Services\CHService.cs" />
     <Compile Include="Services\ColorService.cs" />
+    <Compile Include="Services\PipeParser.cs" />
     <Compile Include="Services\TimerWindowService.cs" />
     <Compile Include="Services\CustomOverlayService.cs" />
     <Compile Include="Services\DataService.cs" />
