--- a/EQToolShared/EQToolShared.csproj
+++ b/EQToolShared/EQToolShared.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Enums\SpellTypes.cs" />
     <Compile Include="Enums\PlayerClasses.cs" />
     <Compile Include="Enums\Servers.cs" />
+    <Compile Include="Enums\ZealPipeEnums.cs" />
     <Compile Include="ExtendedClasses\ObservableCollectionRange.cs" />
     <Compile Include="ExtendedClasses\StringExtensions.cs" />
     <Compile Include="HubModels\CustomTimer.cs" />
