--- a/EQToolShared/EQToolShared.csproj
+++ b/EQToolShared/EQToolShared.csproj
@@ -89,6 +89,7 @@
     <Compile Include="ExtendedClasses\StringExtensions.cs" />
     <Compile Include="HubModels\CustomTimer.cs" />
     <Compile Include="HubModels\PlayerLocation.cs" />
+    <Compile Include="Map\InstancedZones.cs" />
     <Compile Include="Map\SignalrPlayer.cs" />
     <Compile Include="Map\ZoneParser.cs" />
     <Compile Include="Map\ZoneSpawnTimes.cs" />
