--- a/src/packages.config
+++ b/src/packages.config
@@ -5,6 +5,7 @@
   <package id="Dapper.Contrib" version="2.0.78" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="Extended.Wpf.Toolkit" version="4.5.1" targetFramework="net48" />
+  <package id="HelixToolkit.Wpf" version="2.25.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Connections.Client" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Connections.Common" version="8.0.0" targetFramework="net48" />
