--- a/src/EQTool.csproj
+++ b/src/EQTool.csproj
@@ -465,6 +465,7 @@
     <Compile Include="Services\BinarySerializer.cs" />
     <Compile Include="Services\CHService.cs" />
     <Compile Include="Services\ColorService.cs" />
+    <Compile Include="Services\Parsing\TellParser.cs" />
     <Compile Include="Services\PipeParser.cs" />
     <Compile Include="Services\TimerWindowService.cs" />
     <Compile Include="Services\CustomOverlayService.cs" />
